Fix spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,7 +8,7 @@
 
 @layer base {
   body {
-    @apply relative mb-10;
+    @apply relative;
   }
 
   .using-mouse * {
